Some CSS tweaked. Add Legal Notice section into hexterika-cyberlab-services.html page. Add promo code sections but not yet public.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -119,6 +119,34 @@
             </ol>
         </section>
 
+        <!--Promo Code FirstTime10-->
+        <!--
+        <section>
+            <h3>First-Time Client Discount</h3>
+            <p>Hexterika Cyberlab is growing, and we're welcoming early clients with a special offer.</p>
+            <ul>
+                <li>Use code FIRSTTIME10-E2W9 for 10% off your first service.</li>
+                <li>Valid once per new client.</li>
+                <li>Offer expires 31 Dec 2025.</li>
+            </ul>
+            <p>Start secure, start strong.</p>
+        </section>
+        -->
+
+        <!--Promo Code Loyal5-->
+        <!--
+        <section>
+            <h3>Loyalty Reward Program</h3>
+            <p>We value long-term partnerships. Returning clients who complete at least 3 services unlock our loyalty program:</p>
+            <ul>
+                <li>Use code LOYAL5 for 5% off repeat bookings.</li>
+                <li>Valid for 12 months from your third project.</li>
+                <li>Applies to up to 12 uses within the validity period.</li>
+            </ul>
+            <p>Because strong security is built on consistency.p>
+        </section>
+        -->
+
         <!--Payment-->
         <section>
             <h2>Payment</h2>
@@ -146,6 +174,20 @@
             <p>Got an IT headache or security question? Book a 15-min intro call.</p>
             <h4><a href="https://calendar.app.google/M51BQ7DQ2Z3L4SK38" target="_blank" rel="noopener noreferrer" class="button-cta">📅 Book an Appointment</a></h4>
         </section>
+
+        <!--Pre-IE Legal Notice-->
+        <section>
+            <p><strong>Legal Notice</strong></p>
+            <p>Hexterika Cyberlab is a business brand of Sangsongthong Chantaranothai. Registration as an Individual Entrepreneur (IE) in Georgia is planned for November 2025.</p>
+        </section>
+
+        <!--After IE Legal Notice-->
+        <!--
+        <section>
+            <h4>Legal Notice</h4>
+            <p>Hexterika Cyberlab is a business brand of Sangsongthong Chantaranothai, operating as a registered Individual Entrepreneur (IE) in Georgia.</p>
+        </section>
+        -->
     </main>
 
     <!-- Footer Section -->
