Make changes to the offer in hexterika-cyberlab-services.html to tighten the scope but not yet done.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -62,34 +62,179 @@
             </ul>
         </section>
 
-        <!--My Offer-->
+        <!--My Offer New-->
         <section>
             <h2>Simple, Clear Packages</h2>
+            
+            <!--Backup & Recovery Setup-->
+            <section>
+                <h3>📦 Small Business Backup & Recovery Setup</h3>
+                <p><strong>Includes:</strong></p>
+                <ul>
+                    <li>File-level backup setup to local storage or cloud (e.g. Google Drive, OneDrive, Dropbox)</li>
+                    <li>Automation configured using built-in OS tools or free third-party software</li>
+                    <li>Test restore to verify backup integrity</li>
+                    <li>Optional: local VM snapshot setup (e.g. VirtualBox, VMware Workstation, EC2 AMIs)</li>
+                    <li>One-page recovery guide (plain language instructions to restore files or VM state)</li>
+                </ul>
+                <p><strong>Scope:</strong></p>
+                <ul>
+                    <li>For individuals or teams (up to 10 devices/endpoints)</li>
+                    <li>File and folder backups, or local VM snapshots (no full system image or automated disaster recovery)</li>
+                </ul>
+                <p><strong>Not included:</strong></p>
+                <ul>
+                    <li>Enterprise backup systems or disaster recovery planning</li>
+                    <li>Complex or enterprise virtualization platforms (e.g. VMware ESXi, vSphere, or clustered multi-host environments)</li>
+                    <li>Custom scripting or automation pipelines for cloud snapshots</li>
+                </ul>
+                <p><strong>Client needs to provide:</strong></p>
+                <ul>
+                    <li>Admin access to all devices and VMs to be backed up</li>
+                    <li>Configured destination for backups (external drive, NAS, or cloud account)</li>
+                    <li>Stable internet connection for cloud backups</li>
+                </ul>
+                <p><strong>Flat rate:</strong> $20</p>
+            </section>
+
+            <!--AWS IAM Tier 1-->
+            <section>
+                <h3>🔐 AWS IAM Foundation Setup</h3>
+                <p><strong>Includes:</strong></p>
+                <ul>
+                    <li>IAM structure (users, groups, roles) using best-practice AWS-managed policies</li>
+                    <li>MFA required for all users, billing access isolated</li>
+                    <li>Password and access key policies configured</li>
+                </ul>
+                <p><strong>Deliverable:</strong></p>
+                <ul>
+                    <li>User-friendly guide with IAM overview and step-by-step instructions to add new users safely</li>
+                </ul>
+                <p><strong>Scope:</strong></p>
+                <ul>
+                    <li>One AWS account</li>
+                    <li>Up to 10 users</li>
+                    <li>For new or clean accounts only (no active workloads or custom IAM policies)</li>
+                </ul>
+                <p><strong>Not included:</strong></p>
+                <ul>
+                    <li>Multi-account AWS Organization setup</li>
+                    <li>SSO or federated access configuration</li>
+                    <li>Custom service-specific IAM policies (available as add-on at $10 per policy)</li>
+                </ul>
+                <p><strong>Client needs to provide:</strong></p>
+                <ul>
+                    <li>Temporary admin access or screenshare session</li>
+                    <li>List of users with names, roles, and what services they need access to (e.g., EC2, Billing, S3)</li>
+                </ul>
+                <p><strong>Starting at:</strong> $75</p>
+            </section>
+
+            <!--AWS Tier 2-->
+            <section>
+                <h3>🧭 AWS IAM Mini-Audit</h3>
+                <p><strong>Includes:</strong></p>
+                <ul>
+                    <li>Review of IAM (users, groups, roles, policies, MFA, keys)</li>
+                    <li>Findings on risky permissions, unused accounts, billing issues</li>
+                </ul>
+                <p><strong>Deliverable:</strong></p>
+                <ul>
+                    <li>Plain-language report with prioritized fixes (high / medium / low)</li>
+                </ul>
+                <p><strong>Scope:</strong></p>
+                <ul>
+                    <li>One AWS account, up to 25 identities</li>
+                </ul>
+                <p><strong>Not included:</strong></p>
+                <ul>
+                    <li>Remediation or rewriting IAM policies</li>
+                    <li>Pen tests or cost optimization</li>
+                </ul>
+                <p><strong>Client needs to provide:</strong></p>
+                <ul>
+                    <li>Read-only access or guided session</li>
+                </ul>
+                <p><strong>Starting at:</strong> $150</p>
+            </section>
+
+            <!--General Assumption-->
+            <h4>General Assumptions (All Packages)</h4>
             <ul>
-                <li>
-                    <strong>Small Business Backup & Recovery Setup</strong><br>
-                    Automatic file backups (local/cloud), plus a test restore and a one-page recovery guide.<br>
-                    <em>Scope:</em> file-level backups for individuals & small teams. Not a disaster recovery or enterprise imaging service.<br>
-                    -- Starting at $20
-                </li>
-                <li>
-                    <strong>AWS IAM Mini-Audit</strong> <em>(Coming September 2025)</em><br>
-                    Read-only review of IAM users/groups/policies, MFA and password policy, access keys, and billing access separation.<br>
-                    Delivered as a plain-language report with prioritized recommendations.<br>
-                    -- Starting at $20
-                </li>
-                <li>
-                    <strong>Active Directory Health Check</strong> <em>(In Development)</em><br>
-                    Safe enumeration and misconfiguration review for small AD environments (no disruptive exploitation).<br>
-                    Report includes actionable fixes for IT generalists.<br>
-                    -- Starting at $20
-                </li>
-                <li>
-                    <strong>Website Security Health Check</strong> <em>(In Development)</em><br>
-                    Check for outdated software, weak credentials, and common misconfigurations on small business sites (e.g., CMS/WordPress).<br>
-                    Includes a short debrief.<br>
-                    -- Starting at $20
-                </li>
+                <li>Includes one round of minor revisions within 7 days</li>
+                <li>Remote work, scheduled in advance</li>
+                <li>Deliverables in English</li>
+            </ul>
+        </section>
+        
+        <!--My Offer Old-->
+        <section>
+            <h2>Simple, Clear Packages</h2>
+
+            <section>
+                <h4>📦 Small Business Backup & Recovery Setup</h4>
+                <p><strong>What you get:</strong></p>
+                <ul>
+                    <li>Automatic file-level backups (local or cloud)</li>
+                    <li>Verified test restore (so you know it actually works)</li>
+                    <li>A one-page recovery guide written in plain language</li>
+                </ul>
+                <p><strong>Scope:</strong></p>
+                <ul>
+                    <li>Designed for individuals and small teams who want peace of mind without enterprise complexity.</li>
+                </ul>
+                <p><strong>Not included:</strong></p>
+                <ul>
+                    <li>Enterprise disaster recovery or full system imaging.</li>
+                </ul>
+                <p><strong>Flat Rate: $20</strong></p>
+            </section>
+
+            <!-- Tier 1: IAM Foundation Setup -->
+            <section>
+                <h4>🔐 AWS IAM Foundation Setup</h4>
+                <p><strong>What you get:</strong></p>
+                <ul>
+                    <li>A clean, best-practice IAM structure from day one.</li>
+                    <li>Secure user and group setup</li>
+                    <li>MFA enabled</li>
+                    <li>Clear roles and permissions (least privilege principle)</li>
+                    <li>Billing access separated</li>
+                </ul>
+                <p><strong>Deliverable:</strong></p>
+                <ul>
+                    <li>A reference guide explaining your IAM setup and how to add users safely</li>
+                    <li>Configuration and security hardening report summarizing the setup process and IAM best practices</li>
+                </ul>
+                <p><strong>Best For:</strong></p>
+                <ul>
+                    <li>Startups or small teams new to AWS who want a safe, cost-aware foundation.</li>
+                </ul>
+                <p><strong>Starting at: $75</strong></p>
+            </section>
+
+            <!--AWS IAM Tier 2: Not Offer Now, but will offer after I have gained enough experience and confident in AWS IAM setup so I can read other people's setup that can be complicated and messy.-->
+            <!--
+            <section>
+                <h4>🧭 AWS IAM Mini-Audit</h4>
+                <p><strong>What you get:</strong></p>
+                <ul>
+                    <li>A read-only audit of your current IAM environment.</li>
+                    <li>Users, groups, policies, access keys, MFA, and password policies reviewed</li>
+                    <li>Identify overly broad permissions and inactive accounts</li>
+                    <li>Check for billing/account risks</li>
+                </ul>
+                <p><strong>Deliverable:</strong></p>
+                <ul>
+                    <li>Technical IAM Audit Report with prioritized findings and remediation suggestions (high / medium / low severity)</li>
+                </ul>
+                <p><strong>Best For:</strong></p>
+                <ul>
+                    <li>Businesses already using AWS who want to tighten security, cut risks, and reduce waste.</li>
+                </ul>
+                <p><strong>Starting at: $150</strong></p>
+            </section>
+            -->
             </ul>
         </section>
 
@@ -168,8 +313,6 @@
                 <li><a href="https://www.instagram.com/hexterika.cyberlab/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                 <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                <li><a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a></li>
-                <li><a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a></li>
             </ul>
             <p>Got an IT headache or security question? Book a 15-min intro call.</p>
             <h4><a href="https://calendar.app.google/M51BQ7DQ2Z3L4SK38" target="_blank" rel="noopener noreferrer" class="button-cta">📅 Book an Appointment</a></h4>
@@ -185,7 +328,7 @@
         <!--
         <section>
             <h4>Legal Notice</h4>
-            <p>Hexterika Cyberlab is a business brand of Sangsongthong Chantaranothai, operating as a registered Individual Entrepreneur (IE) in Georgia.</p>
+            <p>Hexterika Cyberlab is a business brand of Sangsongthong Chantaranothai, operating as a registered Individual Entrepreneur (IE) in Georgia (Tax ID: #####).</p>
         </section>
         -->
     </main>
