Making changes to hexterika-cyberlab-services.html again and not done yet.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -69,7 +69,9 @@
             <!--Backup & Recovery Setup-->
             <section>
                 <h3>📦 Small Business Backup & Recovery Setup</h3>
-                <p><strong>Includes:</strong></p>
+                <p><strong>Standard Value:</strong> $150 → <strong>Launch Price:</strong> $75</p>
+                <p>When disaster strikes, most small teams discover too late that their backups don't actually work. A working backup isn't just a tech task — it's the core of Business Continuity and Disaster Recovery (BCDR).</p>
+                <p>I'll give you the most crucial slice of BCDR: a tested, automated backup system you can trust, plus a simple one-page recovery guide that anyone on your team can follow.</p>
                 <ul>
                     <li>File-level backup setup to local storage or cloud (e.g. Google Drive, OneDrive, Dropbox)</li>
                     <li>Automation configured using built-in OS tools or free third-party software</li>
@@ -94,12 +96,23 @@
                     <li>Configured destination for backups (external drive, NAS, or cloud account)</li>
                     <li>Stable internet connection for cloud backups</li>
                 </ul>
-                <p><strong>Flat rate:</strong> $20</p>
+                <p>👉 This isn't a full enterprise BCDR strategy. It's the affordable first step: knowing your files and projects are safe, recoverable, and won't vanish overnight.</p>
+                <p><strong>Includes:</strong></p>
+                <p><strong>Flat Launch Price:</strong> $75 (Regular $150)</p>
             </section>
 
             <!--AWS IAM Tier 1-->
             <section>
                 <h3>🔐 AWS IAM Foundation Setup</h3>
+                <p><strong>Standard Value:</strong> $150 → <strong>Launch Price:</strong> $75</p>
+                <p>Every AWS account starts with Identity & Access Management (IAM). Done right, IAM is the foundation that keeps your team secure. Done wrong, it's the weak point that hackers, misconfigurations, and billing confusion exploit.</p>
+                <p>I follow <strong>AWS IAM best practices</strong> to build a clean foundation. That means:</p>
+                <ul>
+                    <li><strong>MFA enforced</strong> for all users.</li>
+                    <li><strong>Roles and groups</strong> that follow least-privilege principles.</li>
+                    <li><strong>Billing separation</strong> — only finance (and authorized leadership) get billing rights, so charges don't spiral out of control or get exposed to the wrong hands.</li>
+                    <li><strong>Simple guide</strong> so you can safely add new users later without creating a mess.</li>
+                </ul>
                 <p><strong>Includes:</strong></p>
                 <ul>
                     <li>IAM structure (users, groups, roles) using best-practice AWS-managed policies</li>
@@ -127,35 +140,8 @@
                     <li>Temporary admin access or screenshare session</li>
                     <li>List of users with names, roles, and what services they need access to (e.g., EC2, Billing, S3)</li>
                 </ul>
-                <p><strong>Starting at:</strong> $75</p>
-            </section>
-
-            <!--AWS Tier 2-->
-            <section>
-                <h3>🧭 AWS IAM Mini-Audit</h3>
-                <p><strong>Includes:</strong></p>
-                <ul>
-                    <li>Review of IAM (users, groups, roles, policies, MFA, keys)</li>
-                    <li>Findings on risky permissions, unused accounts, billing issues</li>
-                </ul>
-                <p><strong>Deliverable:</strong></p>
-                <ul>
-                    <li>Plain-language report with prioritized fixes (high / medium / low)</li>
-                </ul>
-                <p><strong>Scope:</strong></p>
-                <ul>
-                    <li>One AWS account, up to 25 identities</li>
-                </ul>
-                <p><strong>Not included:</strong></p>
-                <ul>
-                    <li>Remediation or rewriting IAM policies</li>
-                    <li>Pen tests or cost optimization</li>
-                </ul>
-                <p><strong>Client needs to provide:</strong></p>
-                <ul>
-                    <li>Read-only access or guided session</li>
-                </ul>
-                <p><strong>Starting at:</strong> $150</p>
+                <p>👉 I don't claim to cover every AWS service. Instead, I secure the essential foundation: the root account, IAM policies, and billing isolation — so your account is safe, organized, and ready to grow.</p>
+                <p><strong>Flat Launch Price:</strong> $75 (Regular $150)</p>
             </section>
 
             <!--General Assumption-->
@@ -167,51 +153,6 @@
             </ul>
         </section>
         
-        <!--My Offer Old-->
-        <section>
-            <h2>Simple, Clear Packages</h2>
-
-            <section>
-                <h4>📦 Small Business Backup & Recovery Setup</h4>
-                <p><strong>What you get:</strong></p>
-                <ul>
-                    <li>Automatic file-level backups (local or cloud)</li>
-                    <li>Verified test restore (so you know it actually works)</li>
-                    <li>A one-page recovery guide written in plain language</li>
-                </ul>
-                <p><strong>Scope:</strong></p>
-                <ul>
-                    <li>Designed for individuals and small teams who want peace of mind without enterprise complexity.</li>
-                </ul>
-                <p><strong>Not included:</strong></p>
-                <ul>
-                    <li>Enterprise disaster recovery or full system imaging.</li>
-                </ul>
-                <p><strong>Flat Rate: $20</strong></p>
-            </section>
-
-            <!-- Tier 1: IAM Foundation Setup -->
-            <section>
-                <h4>🔐 AWS IAM Foundation Setup</h4>
-                <p><strong>What you get:</strong></p>
-                <ul>
-                    <li>A clean, best-practice IAM structure from day one.</li>
-                    <li>Secure user and group setup</li>
-                    <li>MFA enabled</li>
-                    <li>Clear roles and permissions (least privilege principle)</li>
-                    <li>Billing access separated</li>
-                </ul>
-                <p><strong>Deliverable:</strong></p>
-                <ul>
-                    <li>A reference guide explaining your IAM setup and how to add users safely</li>
-                    <li>Configuration and security hardening report summarizing the setup process and IAM best practices</li>
-                </ul>
-                <p><strong>Best For:</strong></p>
-                <ul>
-                    <li>Startups or small teams new to AWS who want a safe, cost-aware foundation.</li>
-                </ul>
-                <p><strong>Starting at: $75</strong></p>
-            </section>
 
             <!--AWS IAM Tier 2: Not Offer Now, but will offer after I have gained enough experience and confident in AWS IAM setup so I can read other people's setup that can be complicated and messy.-->
             <!--
@@ -235,6 +176,25 @@
                 <p><strong>Starting at: $150</strong></p>
             </section>
             -->
+            </ul>
+        </section>
+
+        <!--Why Choose Me-->
+        <section>
+            <h2>⭐ Why Choose Me</h2>
+            <p>Affordable doesn't mean amateur. I bring globally recognized cybersecurity certifications and hands-on training to even the smallest projects — so you get enterprise-grade practices without enterprise costs.</p>
+            <p><strong>Certifications & Training:</strong></p>
+            <ul>
+                <li><strong>ISC2: Certified in Cybersecurity (CC)</strong> - covering security fundamentals, including business continuity and disaster recovery.</li>
+                <li><strong>CompTIA Security+</strong> - globally recognized foundation in cybersecurity principles and practices.</li>
+                <li><strong>TryHackMe: Jr Penetration Tester Path</strong> - hands-on pentesting training covering methodology, mindset, and attacker techniques across multiple areas, giving me a strong penetration testing foundation before choosing a specific specialization (e.g. WiFi, OSINT, Web App, or Red Team).</li>
+                <li><strong>LinkedIn Learning: Active Directory Penetration Testing</strong> - structured training on AD attack vectors and mitigations.</li>
+            </ul>
+            <p><strong>What this means for you:</strong></p>
+            <ul>
+                <li>Your backups aren't just “set up” — they're tested and aligned with continuity best practices.</li>
+                <li>Your AWS account isn't just “configured” — it's structured with <strong>IAM best practices, least-privilege roles, and billing isolation from day one.</strong></li>
+                <li>You work directly with me (not a faceless freelancer marketplace), and I keep things clear, scoped, and affordable.</li>
             </ul>
         </section>
 
