Add more info to hexterika-cyberlab-services.html

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -224,32 +224,51 @@
             </ol>
         </section>
 
-        <!--Promo Code FirstTime10-->
-        <!--
-        <section>
-            <h3>First-Time Client Discount</h3>
-            <p>Hexterika Cyberlab is growing, and we're welcoming early clients with a special offer.</p>
-            <ul>
-                <li>Use code FIRSTTIME10-E2W9 for 10% off your first service.</li>
-                <li>Valid once per new client.</li>
-                <li>Offer expires 31 Dec 2025.</li>
-            </ul>
-            <p>Start secure, start strong.</p>
-        </section>
-        -->
 
-        <!--Promo Code Loyal5-->
+        <!--Promo Code Loyal10-->
         <!--
         <section>
             <h3>Loyalty Reward Program</h3>
             <p>We value long-term partnerships. Returning clients who complete at least 3 services unlock our loyalty program:</p>
             <ul>
-                <li>Use code LOYAL5 for 5% off repeat bookings.</li>
+                <li>Use code LOYAL10 for 10% off repeat bookings.</li>
                 <li>Valid for 12 months from your third project.</li>
                 <li>Applies to up to 12 uses within the validity period.</li>
             </ul>
             <p>Because strong security is built on consistency.p>
         </section>
+        -->
+
+        <!--Promo Code Family-->
+        <!--
+        <section>
+            <h3>Exclusive Family & Friends Offer</h3>
+            <p>A private code reserved for family, close supporters, and their referrals.</p>
+            <ul>
+                <li>Use code FAMILY15 for 15% off any service package.</li>
+                <li>One code per project; not combinable with other promos.</li>
+                <li>Valid until 31 Dec 2025 or for the first 5 projects only.</li>
+            </ul>
+            <p>Support that keeps us secure together.</p>
+        </section>
+        -->
+
+        <!--Promo Code Seasonal-->
+        <!--
+        <section>
+            <h3>Seasonal Offer</h3>
+            <p>Celebrate the season with a special discount.</p>
+            <ul>
+                <li>Use code NEWYEAR10 for 10% off any service package.</li>
+                <li>One code per project; not combinable with other promos.</li>
+                <li>Valid until 15 Jan 2026.</li>
+            </ul>
+            <p>Start the new year with stronger security.</p>
+        </section>
+        -->
+
+        <!--
+        <p><small>Promo codes apply to package fees only. One code per project. Not combinable. Hexterika Cyberlab may withdraw or modify promos at any time.</small></p>
         -->
 
         <!--Payment-->
