Changing SaaS portfolio back to IT and Cybersecurity - minor update

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                 <li><strong>TryHackMe:</strong> Junior Penetration Tester path — Top 3% globally</li>
                 <li><strong>TryHackMe profile:</strong> <a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener">tryhackme.com/p/gexter5thm</a></li>
             </ul>
-            <p>Additional CRM and SaaS-related certifications are listed on my <a href="certs.html">full certifications page</a>.</p>
+            <p>Additional certifications are listed on my <a href="certs.html">full certifications page</a>.</p>
         </section>
 
         <!-- Location & Collaboration -->
@@ -180,9 +180,9 @@
             <p>I'm currently targeting roles across offensive security and security-focused IT — including Junior Pentester, Security Analyst, and Cloud/Identity-focused positions. I also take small, well-scoped client projects through Hexterika Cyberlab.</p>
             <p>If you need someone who can analyze attack paths, investigate misconfigurations, break-and-fix cloud/AD labs, and produce clear remediation-first reports — I'm ready.</p>
             <ul>
-                <li>📄 <a href="https://docs.google.com/document/d/1fFm0pQ5Qw81QcFNM5m9VoprcEondsrME/edit?usp=sharing&ouid=106475564523371366647&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">View My Resume</a></li>
+                <li>📄 <a href="https://docs.google.com/document/d/1jFhB4mN-NMz5p5BGstn9tKqf2G0x1QT0/edit?usp=drive_link&ouid=106475564523371366647&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">View My Resume</a></li>
                 <li>🔗 <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">Connect on LinkedIn</a></li>
-                <li>💬 <a href="mailto:gexterlife.personal@gmail.com">Email Me</a></li>
+                <li>💬 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gexterlife.personal@gmail.com" target="_blank">Email: gexterlife.personal@gmail.com</a></li>
                 <li>🌐 <a href="certs.html">See My Certifications</a></li>
             </ul>
             <p>Thanks for visiting — let's talk if you're building a team that values offensive thinking and clear, practical security improvements.</p>
