Change my homepage/landing page/gateway to be IT and Cybersecurity focus

--- a/index.html
+++ b/index.html
@@ -28,24 +28,31 @@
         <section class="welcome">
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
             <h1>Who Am I?</h1>
-            <p>Hi, I'm Sangsongthong, the creator of Hexterika — a digital brand dedicated to IT support and cybersecurity services. I'm currently operating as a solo freelancer while building my career in cybersecurity and SaaS.</p>
-            <p>This website serves a dual purpose:</p>
+            <p>Hi, I'm Sangsongthong — founder of <strong>Hexterika Cyberlab</strong>, an independent IT & cybersecurity micro-studio based in Georgia.</p>
+            <p>I combine real-world IT support experience with hands-on offensive security training. Hexterika Cyberlab is where I test, break, harden, and document systems — turning lab work into clear, remediation-focused reports and practical services for individuals and small teams.</p>
+            <p>This website has two purposes:</p>
             <ol>
-                <li>A professional portfolio to support my remote job search in cybersecurity and SaaS</li>
-                <li>A freelance services hub under my brand, Hexterika Cyberlab, for project-based work and client collaboration</li>
+                <li><strong>Showcase my cybersecurity and IT work</strong> — for hiring managers looking for Junior Pentesters, Security Analysts, or technical IT roles.</li>
+                <li><strong>Provide a home for Hexterika Cyberlab</strong> — where clients can request small, well-scoped services such as backups, IAM hardening, or basic VAPT.</li>
             </ol>
         </section>
 
         <!--CTA Buttons-->
         <section class="cta">
             <ul>
-                <li><h4><a href="portfolio.html" class="button-cta">📁 View My Portfolio</a></h4></li>
-
-                <li><h4><a href="hexterika-cyberlab-services.html" class="button-cta">🛠 Explore Hexterika Cyberlab Services</a></h4></li>
+                <li>
+                    <h4><a href="portfolio.html" class="button-cta">📁 View My Cybersecurity & IT Portfolio</a></h4>
+                    <p>See hands-on security labs, AD attack paths, AWS IAM hardening, and real-style pentest reports.</p>
+                </li>
 
                 <li>
-                    <h4><a href="certs.html" class="button-cta">📜 See My Full Certifications!</a></h4>
-                    <p>You'll find all my certifications here — including those beyond the scope of Hexterika CyberLab. These reflect my journey of exploration, learning, and professional growth. While my current focus is Cybersecurity & IT, these skills may resurface as the brand evolves.</p>
+                    <h4><a href="hexterika-cyberlab-services.html" class="button-cta">🛠 Explore Hexterika Cyberlab</a></h4>
+                    <p>My independent IT & cybersecurity micro-studio — offering small project work like IAM fixes, basic VAPT, and troubleshooting.</p>
+                </li>
+
+                <li>
+                    <h4><a href="certs.html" class="button-cta">📜 View Certifications</a></h4>
+                    <p>Security+, (ISC)² CC, penetration testing labs, cloud security, and additional technical and non-technical skills.</p>
                 </li>
             </ul>
         </section>
